--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
     text-align: center;
     width: 100px;
     height: 100px;
-    background-color: #ffffff;
+    background-color: #d61818ff;
     border-radius: 100px;
 }
 .panel_p {
