--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #0a9a48;
+    background-color: #454746;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
