--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #edf4f0;
+    background-color: #ff0909;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
