--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #ff0909;
+    background-color: #272424; 
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
